link to format_escape

--- a/doc/plugins/contrib/plaintext/discussion.mdwn
+++ b/doc/plugins/contrib/plaintext/discussion.mdwn
@@ -5,4 +5,8 @@ I guess the advantage of using this plugin is that you get the page wrapper
 around the preformatted text, and could even inline such a page.
 
 There is not currently a good way to turn off some processing steps for
-some page types. It's either all or nothing. --[[Joey]]
+some page types. It's either all or nothing. The patch in
+[[todo/format_escape]] might allow a formatter to register its own special
+version of htmllink that didn't do anything, but would that be enough?
+
+--[[Joey]]
