web commit by sward

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -70,6 +70,7 @@ Personal sites and blogs
 * NicolasLimare ([nil](http://poivron.org/~nil/)+[lab](http://www.ann.jussieu.fr/~limare/)+[id](http://nicolas.limare.net/))
 * [Patrick Winnertz (winnie)](https://www.der-winnie.de)
 * Andrew Sackville-West has setup a [family wiki](http://wiki.swclan.homelinux.org)
+* [Simon Ward's site](http://bleah.co.uk/) and [blog](http://bleah.co.uk/blog/).
 
 Please feel free to add your own ikiwiki site!
 
