--- a/doc/markdown.mdwn
+++ b/doc/markdown.mdwn
@@ -3,8 +3,11 @@ is a minimal markup language that resembles plain text as used in
 email messages. It is the markup language used by this wiki by default.
 
 For documentation about the markdown syntax, see [[HelpOnFormatting]] and
-[Markdown: syntax](http://daringfireball.net/projects/markdown/syntax).
+[Markdown: syntax](http://daringfireball.net/projects/markdown/syntax). A
+[markdown mode](http://jrblevin.freeshell.org/software/markdown-mode/) for 
+emacs can help in editing.
 
 Note that [[WikiLink]]s and [[PreProcessorDirective]]s are not part of the
 markdown syntax, and are the only bit of markup that this wiki handles
 internally.
+
