web commit by NicolasLimare: +1 site (french version of the basewiki)

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -67,7 +67,7 @@ Personal sites and blogs
 * [Carl Worth's Boring Web Pages](http://www.cworth.org)
 * [Charles Mauch](http://xtermin.us)'s website uses ikiwiki.
 * I keep my personal and project notes in a private ikiwiki - it's the perfect tool for this task. - [h01ger](http://layer-acht.org/)
-* NicolasLimare ([nil](http://poivron.org/~nil/)+[lab](http://www.ann.jussieu.fr/~limare/)+[id](http://nicolas.limare.net/))
+* [[NicolasLimare]] ([nil](http://poivron.org/~nil/)+[lab](http://www.ann.jussieu.fr/~limare/)+[id](http://nicolas.limare.net/)+[french translation of the basewiki](http://poivron.org/~nil/ikiwiki-fr/))
 * [Patrick Winnertz (winnie)](https://www.der-winnie.de)
 * Andrew Sackville-West has setup a [family wiki](http://wiki.swclan.homelinux.org)
 * [Simon Ward's site](http://bleah.co.uk/) and [blog](http://bleah.co.uk/blog/).
